--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <li class="header-item"> <a href=""class="header-link link">Контакты</a></li>
             </ul>
            <ul class="header-address list">
-            <li class="header-item"><a href="info@devstudio.com" class="header-mail link">info@devstudio.com</li>
+            <li class="header-item"><a href="info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
             <li class="header-item"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
-        </ul>
+           </ul>
         </nav>
         </div>
     </header>
@@ -73,21 +73,21 @@
             <h2 class="caption">Наша команда</h2>
             <ul class="section-team-foto list">
                 <li class="team-foto"> <img src="./images/demyanenko.jpg" alt="Фото специалиста" width="270" height="260">
-                    <h3 class="caption-name" >Игорь Демьяненко</h3>
-                    <p class="caption-work">Product Designer</p>
+                    <div class="caption-block"><h3 class="caption-name">Игорь Демьяненко</h3>
+                    <p class="caption-work">Product Designer</p></div>
                 </li>
                 <li class="team-foto"> <img src="./images/repina.jpg" alt="Фото специалиста" width="270" height="260">
-                    <h3 class="caption-name">Ольга Репина</h3>
-                    <p class="caption-work">Frontend Developer</p>
+                    <div class="caption-block"><h3 class="caption-name">Ольга Репина</h3>
+                    <p class="caption-work">Frontend Developer</p></div>
                 </li>
 
                 <li class="team-foto"> <img src="./images/tarasov.jpg" alt="Фото специалиста" width="270" height="260">
-                    <h3 class="caption-name">Николай Тарасов </h3>
-                    <p class="caption-work">Marketing</p>
+                    <div class="caption-block"><h3 class="caption-name">Николай Тарасов </h3>
+                    <p class="caption-work">Marketing</p></div>
                 </li>
                 <li class="team-foto"> <img src="./images/yermakov.jpg" alt="Фото специалиста" width="270" height="260">
-                <h3 class="caption-name">Михаил Ермаков </h3>
-                <p class="caption-work">UI Designer</p>
+                <div class="caption-block"><h3 class="caption-name">Михаил Ермаков </h3>
+                <p class="caption-work">UI Designer</p></div>
                 </li>
             </ul>
             </div>
@@ -95,7 +95,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-        <a href=""class="logo link"><span class="logo-web">Web</span>Studio</a>
+        <a href=""class="logo-footer link"><span class="logo-web">Web</span>Studio</a>
         <address>
             <div class="adress-block">
             <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
