--- a/portfolio.html
+++ b/portfolio.html
@@ -13,23 +13,26 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header">
+        <div class="container">
         <nav class="header-nav">
             <a href="" class="logo link"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-list list">
                 <li class="header-item"> <a href="" class="header-link link">Студия</a></li>
-                <li class="header-item"> <a href="./portfolio.html" class="header-link link">Портфолио</a></li>
+                <li class="header-item"> <a href="./index.html" class="header-link link">Портфолио</a></li>
                 <li class="header-item"> <a href="" class="header-link link">Контакты</a></li>
             </ul>
-        </nav>
         <ul class="header-address list">
-            <li><a href="info@devstudio.com" class="header-mail link">info@devstudio.com</li>
-            <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
+            <li class="header-item"><a href="info@devstudio.com" class="header-mail link">info@devstudio.com </a></li>
+            <li class="header-item"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
         </ul>
+        </nav>
+        </div>
     </header>
 <main>
     <h1 class="visually-hidden">портфолио</h1>
-<section class="button">
+<section class="port-button">
+    <div class="container">
 <ul class="first-button list">
 <li><button type="button" class="portfolio-button">Все</button></li>
 <li><button type="button" class="portfolio-button">Веб-сайты</button></li>
@@ -38,42 +41,53 @@
 <li><button type="button" class="portfolio-button">Маркетинг</button></li>
 </ul>
         <ul class="portfolio-list list">
-            <li><img src="./portfolioimg/desktop.jpg" alt="фото ноутбука" width="370" height="294">
-            <h3 class="portfolio-subtitle">Технокряк</h3> <p>Веб-сайт</p></li>
-            <li><img src="./portfolioimg/poster.jpg" alt="фото постера" width="370" height="294">
-                <h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3>
-                <p class="portfolio-text">Дизайн</p></li>
-            <li><img src="./portfolioimg/seafood.jpg" alt="фото упаковки" width="370" height="294">
-                <h3 class="portfolio-subtitle">Ресторан Seafood</h3>
-                <p>Приложение</p></li>
-            <li><img src="./portfolioimg/headphones.jpg" alt="фото наушников" width="370" height="294">
-                <h3 class="portfolio-subtitle">Проект Prime</h3>
-                <p>Маркетинг</p></li>
-            <li><img src="./portfolioimg/boxes.jpg" alt="фото коробочек" width="370" height="294">
-                <h3 class="portfolio-subtitle">Проект Boxes</h3>
-                <p>Приложение</p></li>
-            <li><img src="./portfolioimg/book.jpg" alt="фото книги" width="370" height="294">
-                <h3 class="portfolio-subtitle">Издание Limited Edition</h3>
-                <p>Дизайн</p></li>
-            <li><img src="./portfolioimg/labeltag.jpg" alt="фото бирки" width="370" height="294">
-                <h3 class="portfolio-subtitle">Проект LAB</h3>
-                <p>Маркетинг</p></li>
-            <li><img src="./portfolioimg/work.jpg" alt="фото проекта" width="370" height="294">
-                <h3 class="portfolio-subtitle">Growing Business</h3>
-                <p>Приложение</p>
+            <li class="portfolio-block"><img src="./portfolioimg/desktop.jpg" alt="фото ноутбука" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Технокряк</h3> <p>Веб-сайт</p> </div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/poster.jpg" alt="фото постера" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3>
+                <p class="portfolio-text">Дизайн</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/seafood.jpg" alt="фото упаковки" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Ресторан Seafood</h3>
+                <p>Приложение</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/headphones.jpg" alt="фото наушников" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект Prime</h3>
+                <p>Маркетинг</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/boxes.jpg" alt="фото коробочек" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект Boxes</h3>
+                <p>Приложение</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/monitor.jpg" alt="фото монитора" width="370" height="294">
+                <div class="port-subtitle">
+                    <h3 class="portfolio-subtitle">Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </div>
+            </li>
+            <li class="portfolio-block"><img src="./portfolioimg/book.jpg" alt="фото книги" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Издание Limited Edition</h3>
+                <p>Дизайн</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/labeltag.jpg" alt="фото бирки" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект LAB</h3>
+                <p>Маркетинг</p></div></li>
+            <li class="portfolio-block"><img src="./portfolioimg/work.jpg" alt="фото проекта" width="370" height="294">
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Growing Business</h3>
+                <p>Приложение</p></div>
             </li>
         </ul>
+        </div>
     </section>
 </main>
-<footer>
-    <a href="" class="logo link"><span class="logo-web">Web</span>Studio</a>
+<footer class="portfolio-footer">
+    <div class="container">
+    <a href="" class="logo-footer link"><span class="logo-web">Web</span>Studio</a>
     <address>
+        <div class="adress-block">
         <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
         <ul class="footer-directed list">
             <li><a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</li>
             <li><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a> </li>
         </ul>
+        </div>
     </address>
+    </div>
 </footer>
 </body>
 </html>
