--- a/portfolio.html
+++ b/portfolio.html
@@ -29,47 +29,48 @@
         </nav>
         </div>
     </header>
-<main>
+<main><hr align="center" width="1600" size="2px" color="ECECEC"> 
+
     <h1 class="visually-hidden">портфолио</h1>
 <section class="port-button">
     <div class="container">
 <ul class="first-button list">
-<li><button type="button" class="portfolio-button">Все</button></li>
-<li><button type="button" class="portfolio-button">Веб-сайты</button></li>
-<li><button type="button" class="portfolio-button">Приложения</button></li>
-<li><button type="button" class="portfolio-button">Дизайн</button></li>
-<li><button type="button" class="portfolio-button">Маркетинг</button></li>
+<li class="rst-button"><button type="button" class="portfolio-button">Все</button></li>
+<li class="rst-button"><button type="button" class="portfolio-button">Веб-сайты</button></li>
+<li class="rst-button"><button type="button" class="portfolio-button">Приложения</button></li>
+<li class="rst-button"><button type="button" class="portfolio-button">Дизайн</button></li>
+<li class="rst-button"><button type="button" class="portfolio-button">Маркетинг</button></li>
 </ul>
         <ul class="portfolio-list list">
             <li class="portfolio-block"><img src="./portfolioimg/desktop.jpg" alt="фото ноутбука" width="370" height="294">
-                <div class="port-subtitle"><h3 class="portfolio-subtitle">Технокряк</h3> <p>Веб-сайт</p> </div></li>
+                <div class="port-subtitle"><h3 class="portfolio-subtitle">Технокряк</h3> <p class="portfolio-text">Веб-сайт</p> </div></li>
             <li class="portfolio-block"><img src="./portfolioimg/poster.jpg" alt="фото постера" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Постер New Orlean vs Golden Star</h3>
                 <p class="portfolio-text">Дизайн</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/seafood.jpg" alt="фото упаковки" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Ресторан Seafood</h3>
-                <p>Приложение</p></div></li>
+                <p class="portfolio-text">Приложение</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/headphones.jpg" alt="фото наушников" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект Prime</h3>
-                <p>Маркетинг</p></div></li>
+                <p class="portfolio-text">Маркетинг</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/boxes.jpg" alt="фото коробочек" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект Boxes</h3>
-                <p>Приложение</p></div></li>
+                <p class="portfolio-text">Приложение</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/monitor.jpg" alt="фото монитора" width="370" height="294">
                 <div class="port-subtitle">
                     <h3 class="portfolio-subtitle">Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <p class="portfolio-text">Веб-сайт</p>
                 </div>
             </li>
             <li class="portfolio-block"><img src="./portfolioimg/book.jpg" alt="фото книги" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Издание Limited Edition</h3>
-                <p>Дизайн</p></div></li>
+                <p class="portfolio-text">Дизайн</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/labeltag.jpg" alt="фото бирки" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Проект LAB</h3>
-                <p>Маркетинг</p></div></li>
+                <p class="portfolio-text">Маркетинг</p></div></li>
             <li class="portfolio-block"><img src="./portfolioimg/work.jpg" alt="фото проекта" width="370" height="294">
                 <div class="port-subtitle"><h3 class="portfolio-subtitle">Growing Business</h3>
-                <p>Приложение</p></div>
+                <p class="portfolio-text">Приложение</p></div>
             </li>
         </ul>
         </div>
