--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
         <nav class="header-nav">
             <a href=""class="logo link"><span class="logo-web">Web</span>Studio</a>
             <ul class="header-list list">
-                <li class="header-item"> <a href=""class="header-link link">Студия</a></li>
-                <li class="header-item"> <a href="./portfolio.html"class="header-link link">Портфолио</a></li>
-                <li class="header-item"> <a href=""class="header-link link">Контакты</a></li>
+                <li class="header-item"> <a href=""class="header-link link">Студія</a></li>
+                <li class="header-item"> <a href="./portfolio.html"class="header-link link">Портфоліо</a></li>
+                <li class="header-item"> <a href=""class="header-link link">Контакти</a></li>
             </ul>
            <ul class="header-address list">
-            <li class="header-item"><a href="info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-            <li class="header-item"><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
+            <li class="header-item">
+                <svg class="caption-address-icon" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                </svg> 
+                <a href= "info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+            <li class="header-item">
+                <svg class="caption-address-icon" width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg> 
+                <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
            </ul>
         </nav>
         </div>
@@ -32,35 +40,55 @@
     <main>
         <section class="title">
         <div class="container">
-            <h1 class="section-title">Эффективные решения для вашего бизнеса</h1>
-            <button type="button" class="section-btn">Заказать услугу</button>
+            <h1 class="section-title">Эфективні рішення для вашего бизнесу</h1>
+            <button type="button" class="section-btn">Замовити послугу</button>
         </div>
         </section>
         <section class="after-hero">
             <div class="container">
         <ul class="section-after-hero list">
             <li class="section-sub-text">
-                <h3 class="section-subtitle"> Внимание к деталям</h3>
-                <p class="section-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                <div class="icon-section-sub">
+                    <svg class="caption-address-icon" width="70" height="70">
+                        <use href="./images/icons.svg#icon-antenna-1"></use>
+                    </svg>
+                </div>
+                <h3 class="section-subtitle"> Увага до деталей</h3>
+                <p class="section-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
             <li class="section-sub-text">
-                <h3 class="section-subtitle">Пунктуальность</h3>
-                <p class="section-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <div class="icon-section-sub">
+                    <svg class="caption-address-icon" width="70" height="70">
+                        <use href="./images/icons.svg#icon-clock-1"></use>
+                    </svg>
+                </div>
+                <h3 class="section-subtitle">Пунктуальність</h3>
+                <p class="section-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
             <li class="section-sub-text">
-                <h3 class="section-subtitle">Планирование</h3>
-                <p class="section-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <div class="icon-section-sub">
+                    <svg class="caption-address-icon" width="70" height="70">
+                        <use href="./images/icons.svg#icon-diagram-1-1"></use>
+                    </svg>
+                </div>
+                <h3 class="section-subtitle">Планування</h3>
+                <p class="section-text">Так само консультація з широким активом значною мірою зумовлює.</p>
             </li>
             <li class="section-sub-text">
-                <h3 class="section-subtitle">Современные технологии</h3>
-                <p class="section-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <div class="icon-section-sub">
+                    <svg class="caption-address-icon" width="70" height="70">
+                        <use href="./images/icons.svg#icon-astronaut-1-1"></use>
+                    </svg>
+                </div>
+                <h3 class="section-subtitle">Сучасні технології</h3>
+                <p class="section-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
         </div>
         </section>
         <section class="section-container">
             <div class="container">
-            <h2 class="caption">Чем мы занимаемся</h2>
+            <h2 class="caption">Чим ми займаємося</h2>
              <ul class="caption-foto list">
                 <li class="box-foto"> <img src="./images/box1.jpg" alt="фото cхема" width="370" height="294"></li>
                 <li class="box-foto"> <img src="./images/box2.jpg" alt="фото проєкция" width="370" height="294"></li>
@@ -73,38 +101,223 @@
             <h2 class="caption">Наша команда</h2>
             <ul class="section-team-foto list">
                 <li class="team-foto"> <img src="./images/demyanenko.jpg" alt="Фото специалиста" width="270" height="260">
-                    <div class="caption-block"><h3 class="caption-name">Игорь Демьяненко</h3>
-                    <p class="caption-work">Product Designer</p></div>
+                    <div class="caption-block"><h3 class="caption-name">Ігор Дем'яненко</h3>
+                    <p class="caption-work">Product Designer</p>
+                <ul class="caption-soc list">
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon"  width="20" height="20" >
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg> </a>
+                    </li>
+                </ul></div>
                 </li>
                 <li class="team-foto"> <img src="./images/repina.jpg" alt="Фото специалиста" width="270" height="260">
-                    <div class="caption-block"><h3 class="caption-name">Ольга Репина</h3>
-                    <p class="caption-work">Frontend Developer</p></div>
+                    <div class="caption-block"><h3 class="caption-name">Ольга Рєпіна</h3>
+                    <p class="caption-work">Frontend Developer</p>
+                <ul class="caption-soc list">
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg> </a>
+                    </li>
+                </ul></div>
                 </li>
 
                 <li class="team-foto"> <img src="./images/tarasov.jpg" alt="Фото специалиста" width="270" height="260">
-                    <div class="caption-block"><h3 class="caption-name">Николай Тарасов </h3>
-                    <p class="caption-work">Marketing</p></div>
+                    <div class="caption-block"><h3 class="caption-name">Микола Тарасов </h3>
+                    <p class="caption-work">Marketing</p>
+                <ul class="caption-soc list">
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg> </a>
+                    </li>
+                    <li class="caption-soc-item">
+                        <a href="" class="caption-soc-link link">
+                            <svg class="caption-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg> </a>
+                    </li>
+                </ul> </div>
                 </li>
                 <li class="team-foto"> <img src="./images/yermakov.jpg" alt="Фото специалиста" width="270" height="260">
-                <div class="caption-block"><h3 class="caption-name">Михаил Ермаков </h3>
-                <p class="caption-work">UI Designer</p></div>
+                <div class="caption-block"><h3 class="caption-name">Михайло Єрмаков </h3>
+                <p class="caption-work">UI Designer</p>
+            <ul class="caption-soc list">
+                <li class="caption-soc-item">
+                    <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="caption-soc-item">
+                    <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg> </a>
+                </li>
+                <li class="caption-soc-item">
+                    <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg> </a>
+                </li>
+                <li class="caption-soc-item">
+                    <a href="" class="caption-soc-link link">
+                        <svg class="caption-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg> </a>
+                </li>
+            </ul></div>
                 </li>
             </ul>
             </div>
-        </section>
+            </section>
+                        <div class="const-client">
+                        <h2 class="caption">Постійні клієнти</h2>
+                        <ul class="const list">
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo"></use>
+                                    </svg> </a>
+                            </li>
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo-1"></use>
+                                    </svg> </a>
+                            </li>
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo-2"></use>
+                                    </svg> </a>
+                            </li>
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo-3"></use>
+                                    </svg> </a>
+                            </li>
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo-4"></use>
+                                    </svg> </a>
+                            </li>
+                            <li class="const-li">
+                                <a href="" class="const-link link">
+                                    <svg class="icon-const-client" width="105" height="60">
+                                        <use href="./images/icons.svg#icon-Logo-5"></use>
+                                    </svg> </a>
+                            </li>
+                        </ul> 
+                        </div>
+            
     </main>
     <footer class="footer">
         <div class="container">
+            <div class="footer-tab"> 
+            <section class="footer-left" >
         <a href=""class="logo-footer link"><span class="logo-web">Web</span>Studio</a>
         <address>
             <div class="adress-block">
-            <p class="footer-address">г. Киев, пр-т Леси Украинки, 26</p>
+            <p class="footer-address">м. Київ, пр-т Лесі Українки, 26</p>
             <ul class="footer-directed list">
                 <li><a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</li>
                 <li><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a> </li>
             </ul>
             </div>
         </address>
+        </section>
+        <section class="footer-right">
+            <h3 class="right-big">приєднуйтесь</h3>
+            <ul class="caption-soc list">
+                <li class="footer-soc-item">
+                    <a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg> </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg> </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a href="" class="footer-soc-link link">
+                        <svg class="footer-soc-icon" width="20" height="20">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg> </a>
+                </li>
+            </ul>
+
+            </section>
+            </div>
         </div>
     </footer>
 </body>
