--- a/index.html
+++ b/index.html
@@ -24,19 +24,17 @@
             </ul>
            <ul class="header-address list">
             <li class="header-item">
-                <svg class="caption-address-icon" width="16" height="12">
+                <a href= "info@devstudio.com" class="header-mail link"><svg class="caption-address-icon" width="16" height="12">
                     <use href="./images/icons.svg#icon-envelope"></use>
-                </svg> 
-                <a href= "info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
+                </svg>   info@devstudio.com</a></li>
             <li class="header-item">
-                <svg class="caption-address-icon" width="10" height="16">
+                <a href="tel:+380961111111" class="header-tel link"> <svg class="caption-address-icon" width="10" height="16">
                     <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg> 
-                <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a> </li>
+                </svg> +38 096 111 11 11</a> </li>
            </ul>
         </nav>
         </div>
-    </header>
+      </header>
     <main>
         <section class="title">
         <div class="container">
