--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
         </div>
     </address>
     </section>
-    <section class="footer-right">
+    <div class="footer-right">
         <h3 class="right-big">приєднуйтесь</h3>
         <ul class="caption-soc list">
             <li class="footer-soc-item">
@@ -127,8 +127,6 @@
                     </svg> </a>
             </li>
         </ul>
-    
-    </section>
     </div>
     </div>
 </footer>
