--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <li class="header-item">
                 <a href= "info@devstudio.com" class="header-mail link"><svg class="caption-address-icon" width="16" height="12">
                     <use href="./images/icons.svg#icon-envelope"></use>
-                </svg>   info@devstudio.com</a></li>
+                </svg>info@devstudio.com</a></li>
             <li class="header-item">
-                <a href="tel:+380961111111" class="header-tel link"> <svg class="caption-address-icon" width="10" height="16">
+                <a href="tel:+380961111111" class="header-tel link"><svg class="caption-address-icon" width="10" height="16">
                     <use href="./images/icons.svg#icon-smartphone"></use>
-                </svg> +38 096 111 11 11</a> </li>
+                </svg>+38 096 111 11 11</a> </li>
            </ul>
         </nav>
         </div>
@@ -284,7 +284,7 @@
             </div>
         </address>
         </section>
-        <section class="footer-right">
+        <div class="footer-right">
             <h3 class="right-big">приєднуйтесь</h3>
             <ul class="caption-soc list">
                 <li class="footer-soc-item">
@@ -313,8 +313,6 @@
                         </svg> </a>
                 </li>
             </ul>
-
-            </section>
             </div>
         </div>
     </footer>
